--- a/Media.html
+++ b/Media.html
@@ -5,6 +5,7 @@
     <meta name= "viewport" content="width-device-width, initial-scale=1.0"> 
     <title>portefølje</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style2.css">
 </head>
 <body>
    
@@ -17,9 +18,10 @@
     </div>
     <h1 class="overskrift">Media-Prosjekter</h1>
    <div id="index-Gallery">
-        <a href="0001-0350 (1).mp4"> <img src="Screenshot 2024-01-18 081944.png" alt="blender_demon"></a>
-        <p>kort animasjon laget i blender den er veldig enkel og ikke spesielt god men er min første</p>
-       
+    <a href="0001-0350 (1).mp4"><img src="blendero.jpg" alt="blender"></a>
+    
+        <p>kort animasjon laget i blender den er veldig enkel </p>
+         <p>og ikke spesielt god men er min første model.</p>
         </div> 
     </div>
    </div>
