--- a/Kontakt.html
+++ b/Kontakt.html
@@ -15,8 +15,9 @@
         <a href="IT.html">IT</a>
         <a href="Media.html">Media</a>
     </div>
+    
     <h1 class="overskrift"> Kontakt</h1>
     <h2 class="Kontakt">E-post: Adrianskole912@gmail.com</h2>
-    <h2 class="Kontakt">Telefon:
+    <h2 class="Kontakt">Telefon: 940 94 856
     </h2>
 </body>
