--- a/om.html
+++ b/om.html
@@ -16,6 +16,8 @@
         <a href="Media.html">Media</a>
     </div>
     <h1 class="overskrift">Om meg</h1>
-    <h2>jeg er elev ved Åssiden Vidregående Skole hvor jeg har lært og fått erfaring med både media og IT.</h2>
+    <img  class="adrian" src="adrian.JPG" alt="adrian">
+    <h3 style="float: right;">jeg er elev ved Åssiden Vidregående Skole hvor jeg har lært og fått erfaring med både media og IT.</h3>
+    <h3 style="float: right;">Jeg har lært å bruke programmer som photoshop, blender og Unity.</h3>
     <h2></h2>
 </body>
