kode endring og nytt bilde

--- a/Media.html
+++ b/Media.html
@@ -19,9 +19,12 @@
     <h1 class="overskrift">Media-Prosjekter</h1>
    <div id="index-Gallery">
     <a href="0001-0350 (1).mp4"><img src="blendero.jpg" alt="blender"></a>
-    
-        <p>kort animasjon laget i blender den er veldig enkel </p>
+          <div class="text">
+         <p>kort animasjon laget i blender den er veldig enkel </p>
          <p>og ikke spesielt god men er min første model.</p>
+         <p>modellen i seg selv var satt sammen ganske fort siden den var</p> 
+         <p>for en oppgave så den kunne vært bedre.</p>
+         </div>
         </div> 
     </div>
    </div>
