--- a/IT.html
+++ b/IT.html
@@ -17,5 +17,5 @@
     </div>
     <h1 class="overskrift">IT-Prosjekter </h1>
     <a href="https://workbin.dev/?id=1704700566108710"><img src="cesar.jpg" alt="kode" style="float: left;"></a>
-    <p class="text">cesar schifer laget i python. (trykk på bildet for å se koden bedre)</p>
+    <h2 class="text">cesar schifer laget i python. (trykk på bildet for å se koden bedre)</h2>
 </body>
