--- a/Kontakt.html
+++ b/Kontakt.html
@@ -17,7 +17,8 @@
     </div>
     
     <h1 class="overskrift"> Kontakt</h1>
+    <div class="text">
     <h2 class="Kontakt">E-post: Adrianskole912@gmail.com</h2>
     <h2 class="Kontakt">Telefon: 940 94 856
-    </h2>
+    </h2></div>
 </body>
