--- a/Media.html
+++ b/Media.html
@@ -20,10 +20,10 @@
    <div id="index-Gallery">
     <a href="0001-0350 (1).mp4"><img src="blendero.jpg" alt="blender"></a>
           <div class="text">
-         <p>kort animasjon laget i blender den er veldig enkel </p>
-         <p>og ikke spesielt god men er min første model.</p>
-         <p>modellen i seg selv var satt sammen ganske fort siden den var</p> 
-         <p>for en oppgave så den kunne vært bedre.</p>
+         <h2>kort animasjon laget i blender den er veldig enkel </h2>
+         <h2>og ikke spesielt god men er min første model.</h2>
+         <h2>modellen i seg selv var satt sammen ganske fort siden den var</h2> 
+         <h2>for en oppgave så den kunne vært bedre.</h2>
          </div>
         </div> 
     </div>
