endringer og nye bilder

--- a/IT.html
+++ b/IT.html
@@ -16,6 +16,13 @@
         <a href="Media.html">Media</a>
     </div>
     <h1 class="overskrift">IT-Prosjekter </h1>
-    <a href="https://workbin.dev/?id=1704700566108710"><img src="cesar.jpg" alt="kode" style="float: left;"></a>
+     
+    <div>
+        <a href="https://workbin.dev/?id=1704700566108710"><img src="cesar.jpg" alt="kode" style="float: left;"></a>
+    </div>
     <h2 class="text">cesar schifer laget i python. (trykk på bildet for å se koden bedre)</h2>
+    <div>
+      <a href="https://workbin.dev/?id=1706608390104550"><img src="game.jpg" alt="game" style="float: right;" height="300px" width="400px"></a>
+    </div>
+    <h2 class="text" style="float: right;">første persons bevegelses skript laget i unity (trykk på bildet for å se koden)</h2>
 </body>
