--- a/om.html
+++ b/om.html
@@ -15,11 +15,13 @@
         <a href="IT.html">IT</a>
         <a href="Media.html">Media</a>
     </div>
-    <h1 class="overskrift">Om meg</h1>
+    <div class="text2">
+    <h1 class="overskrift" style="font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Om Meg</h1>
     <img  class="adrian" src="adrian.JPG" alt="adrian">
-    <div class="text">
-    <h2 style="float: right;">jeg er elev ved Åssiden Vidregående Skole hvor jeg har lært og fått erfaring med både media og IT.</h2>
-    <h2 style="float: right;">Jeg har lært å bruke programmer som photoshop, blender og Unity.</h2>
-    <h2></h2>
+    
+    <h2>jeg er elev ved Åssiden Vidregående Skole hvor jeg har lært og fått erfaring med både media og IT.</h2>
+    <h2>Jeg har lært å bruke programmer som photoshop, blender og Unity.</h2>
+    <h2>så jeg har litt erfaring med koding og litt erfaring med animasjon</h2>
+</div>
 </div>
 </body>
