nytt bilde og kode

--- a/Media.html
+++ b/Media.html
@@ -24,6 +24,10 @@
          <h2>og ikke spesielt god men er min første model.</h2>
          <h2>modellen i seg selv var satt sammen ganske fort siden den var</h2> 
          <h2>for en oppgave så den kunne vært bedre.</h2>
+         <img src="animate.jpg" alt="anim" style="float: right;">
+         <div class="text3">
+            <h2>animasjon som blir laget i Adobe Animate for et prosjekt på skolen</h2>
+         </div>
          </div>
         </div> 
     </div>
