--- a/Media.html
+++ b/Media.html
@@ -27,6 +27,7 @@
          <img src="animate.jpg" alt="anim" style="float: right;">
          <div class="text3">
             <h2>animasjon som blir laget i Adobe Animate for et prosjekt på skolen</h2>
+            <h2>prosjektet er foreløbig uferdig</h2>
          </div>
          </div>
         </div> 
