endret ting og la til rapport

--- a/om.html
+++ b/om.html
@@ -21,7 +21,7 @@
     
     <h2>jeg er elev ved Åssiden Vidregående Skole hvor jeg har lært og fått erfaring med både media og IT.</h2>
     <h2>Jeg har lært å bruke programmer som photoshop, blender og Unity.</h2>
-    <h2>så jeg har litt erfaring med koding og litt erfaring med animasjon</h2>
+    <h2>så jeg har litt erfaring med koding og litt erfaring med animasjon og annet grafisk arbeid</h2>
 </div>
 </div>
 </body>
